--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="stylesheet" href="assets/bpm_styles.css" type="text/css" media="screen" charset="utf-8" />
 
-    <title>rss-client</title>
+    <title>addtorrent</title>
   </head>
   <body>
     <h1>Hello World</h1>
